refactor: add nats to healthchecker
